test: add first unit test for AlertRuleRequestDTO